test/conformance/chainsaw/namespaced-generating-policies/data/generate-cm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
