test/conformance/chainsaw/namespaced-generating-policies/data/generate-cm/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: NamespacedGeneratingPolicy
metadata:
  name: generate-configmap
  namespace: test-namespace
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  variables:
    - name: configmap
      expression: >-
        [
          {
            "kind": dyn("ConfigMap"),
            "apiVersion": dyn("v1"),
            "metadata": dyn({
              "name": "generated-config",
            }),
            "data": dyn({
              "environment": "namespaced-policy",
              "managed-by": "kyverno"
            })
          }
        ]
  generate:
    - expression: generator.apply(variables.configmap)
