test/conformance/chainsaw/_step-templates/namespaced-generating-policy-ready.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: namespaced-generating-policy-ready
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: policies.kyverno.io/v1beta1
        kind: NamespacedGeneratingPolicy
        metadata:
          name: ($name)
          namespace: ($namespace)
        status:
          conditionStatus:
            (conditions[?type == 'WebhookConfigured']):
            - message: Webhook configured.
              reason: Succeeded
              status: "True"
              type: WebhookConfigured
            ready: true
